--- a/app/src/main/res/layout/toolbar_header.xml
+++ b/app/src/main/res/layout/toolbar_header.xml
@@ -4,6 +4,7 @@
     android:layout_height="?actionBarSize">
   
     <ImageView
+        android:layout_marginLeft="16dp"
         android:visibility="gone"
         android:id="@+id/btn_back_toolbar"
         android:layout_width="wrap_content"
