--- a/app/src/main/res/layout/fragment_room_chat.xml
+++ b/app/src/main/res/layout/fragment_room_chat.xml
@@ -1,47 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.chat.room.RoomChatFragment">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <RelativeLayout
+        android:id="@+id/layout_body"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingBottom="10dp">
+        >
+
+        <include android:id="@+id/layout_header"
+            layout="@layout/toolbar_header"/>
+
+        <ImageView
+            android:id="@+id/imgCallVideo"
+            android:layout_width="38dp"
+            android:layout_height="38dp"
+            android:padding="4dp"
+            android:layout_marginVertical="11dp"
+            android:src="@drawable/baseline_videocam_24"
+            android:layout_toStartOf="@+id/imgCall"
+            />
+
+        <ImageView
+            android:id="@+id/imgCall"
+            android:layout_width="38dp"
+            android:layout_height="38dp"
+            android:padding="6dp"
+            android:layout_margin="11dp"
+            android:src="@drawable/icon_call"
+            android:layout_alignParentEnd="true"/>
+
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rcvChat"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_above="@+id/layout_bottom"
-            android:paddingHorizontal="10dp"/>
+            android:paddingHorizontal="10dp"
+            android:layout_below="@+id/layout_header"/>
 
         <LinearLayout
             android:id="@+id/layout_bottom"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_marginHorizontal="24dp"
+            android:layout_marginHorizontal="14dp"
             android:gravity="bottom"
+            android:paddingBottom="10dp"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/imgCamera"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginBottom="14dp"
+                android:layout_width="38dp"
+                android:layout_height="38dp"
+                android:padding="8dp"
                 android:src="@drawable/icon_camera" />
 
             <ImageView
                 android:id="@+id/imgGallery"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginBottom="14dp"
-                android:src="@drawable/icon_gallery" />
+                android:layout_width="38dp"
+                android:layout_height="38dp"
+                android:padding="8dp"
+                android:src="@drawable/icon_gallery"/>
 
             <androidx.coordinatorlayout.widget.CoordinatorLayout
                 android:layout_width="match_parent"
@@ -69,19 +92,94 @@
 
                 <ImageView
                     android:id="@+id/imgSend"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
+                    android:layout_width="44dp"
+                    android:layout_height="44dp"
                     android:layout_gravity="bottom|end"
-                    android:layout_margin= "12dp"
+                    android:padding="10dp"
+                    android:layout_margin= "2dp"
                     android:src="@drawable/icon_send" />
 
             </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
         </LinearLayout>
 
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/img_sending"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginBottom="-15dp"
+            android:layout_centerInParent="true"
+            android:layout_above="@+id/layout_bottom"
+            app:lottie_rawRes="@raw/loading_gif"
+            app:lottie_loop="true"
+            app:lottie_autoPlay="true"
+            android:visibility="gone"
+            />
+
     </RelativeLayout>
 
+    <LinearLayout
+        android:id="@+id/layout_behavior"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#fff"
+        android:orientation="vertical"
+        android:visibility="gone"
+        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
 
-    
+        <RelativeLayout
+            android:id="@+id/layout_header_gallery"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:background="@color/dark_grey">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <View
+                android:layout_width="50dp"
+                android:layout_height="3dp"
+                android:background="@color/background"
+                android:layout_centerInParent="true"/>
+
+        </RelativeLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rcv_gallery"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingHorizontal="1dp"/>
+
+        <RelativeLayout
+            android:id="@+id/layout_no_per_gallery"
+            android:layout_width="match_parent"
+            android:layout_height="1000dp">
+
+            <TextView
+                android:id="@+id/tvPerGallery"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:text="Không có ảnh để xem"/>
+
+            <Button
+                android:id="@+id/btnPerGaller"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_below="@+id/tvPerGallery"
+                android:text="Cho xem ảnh đê"/>
+
+        </RelativeLayout>
+
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/btn_send_image"
+        android:layout_width="match_parent"
+        android:layout_height="64dp"
+        android:text="Gửi"
+        android:visibility="gone"
+        android:layout_gravity="bottom"
+        android:layout_marginHorizontal="40dp"
+        android:layout_marginVertical="10dp"/>
+
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
