--- a/app/src/main/res/layout/item_chat_me.xml
+++ b/app/src/main/res/layout/item_chat_me.xml
@@ -106,90 +106,34 @@
 
                     <ImageView
                         android:id="@+id/imgMassage"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:maxHeight="300dp"
-                        android:maxWidth="200dp"
+                        android:layout_width="200dp"
+                        android:layout_height="match_parent"
+                        android:maxHeight="500dp"
+                        android:scaleType="matrix"
                         android:src="@mipmap/ic_launcher"
                         android:layout_alignParentRight="true"
-                        android:visibility="gone"
                         android:background="@drawable/background_border_radius_chat"
                         android:clipToOutline="true"
                         />
+
+                    <TextView
+                        android:id="@+id/tvCountImages"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="14sp"
+                        android:paddingHorizontal="20dp"
+                        android:layout_margin="10dp"
+                        android:background="@drawable/background_border_radius_chat"
+                        android:backgroundTint="@color/grey_transparent"
+                        android:textColor="@color/white"
+                        android:layout_alignParentRight="true"
+                        android:visibility="gone"/>
 
                 </RelativeLayout>
 
             </RelativeLayout>
 
-            <LinearLayout
-                android:id="@+id/cvAvatar"
-                android:layout_width="38dp"
-                android:layout_height="38dp"
-                android:layout_marginStart="8dp">
-
-                <ImageView
-                    android:id="@+id/imgAvatar"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@drawable/background_boder_radius_circle"
-                    android:clipToOutline="true"
-                    />
-
-            </LinearLayout>
-
         </LinearLayout>
-
-
-        <!--        <LinearLayout-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_below="@+id/tvTime"-->
-<!--            android:layout_alignParentEnd="true"-->
-<!--            android:gravity="bottom">-->
-
-<!--            <RelativeLayout-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content">-->
-
-<!--                <TextView-->
-<!--                    android:id="@+id/tvMessage"-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:textSize="14sp"-->
-<!--                    android:maxWidth="250dp"-->
-<!--                    android:paddingHorizontal="16dp"-->
-<!--                    android:paddingVertical="8dp"-->
-<!--                    android:textColor="@color/white"-->
-<!--                    android:background="@drawable/background_border_radius_chat"-->
-<!--                    android:backgroundTint="@color/red_light"-->
-<!--                    />-->
-
-<!--                <ImageView-->
-<!--                    android:id="@+id/imgMassage"-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:maxHeight="300dp"-->
-<!--                    android:maxWidth="200dp"-->
-<!--                    android:visibility="gone"-->
-<!--                    android:src="@drawable/ic_launcher_background" />-->
-
-<!--            </RelativeLayout>-->
-
-
-<!--            <LinearLayout-->
-<!--                android:id="@+id/cvAvatar"-->
-<!--                android:layout_width="38dp"-->
-<!--                android:layout_height="38dp"-->
-<!--                android:layout_marginStart="8dp"-->
-<!--                android:background="@drawable/background_boder_radius_circle">-->
-
-<!--                <ImageView-->
-<!--                    android:id="@+id/imgAvatar"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="match_parent"-->
-<!--                    />-->
-<!--            </LinearLayout>-->
-<!--        </LinearLayout>-->
 
     </RelativeLayout>
 
@@ -199,5 +143,17 @@
         android:layout_marginStart="20dp"
         android:src="@drawable/baseline_reply_24"
         android:layout_toRightOf="@+id/layout_main"/>
+
+    <TextView
+        android:id="@+id/tv_sending"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="10sp"
+        android:layout_margin="5dp"
+        android:text=""
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/layout_main"
+        android:visibility="gone"
+        />
 
 </RelativeLayout>
