--- a/app/src/main/res/layout/item_chat_you.xml
+++ b/app/src/main/res/layout/item_chat_you.xml
@@ -114,15 +114,29 @@
 
                   <ImageView
                       android:id="@+id/imgMassage"
-                      android:layout_width="wrap_content"
-                      android:layout_height="wrap_content"
-                      android:maxHeight="300dp"
-                      android:maxWidth="200dp"
+                      android:layout_width="200dp"
+                      android:layout_height="match_parent"
+                      android:maxHeight="500dp"
+                      android:scaleType="matrix"
                       android:src="@mipmap/ic_launcher"
                       android:background="@drawable/background_border_radius_chat"
                       android:clipToOutline="true"
-                      android:visibility="gone"
                       />
+
+                  <TextView
+                      android:id="@+id/tvCountImages"
+                      android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:textSize="14sp"
+                      android:paddingHorizontal="20dp"
+                      android:background="@drawable/background_border_radius_chat"
+                      android:backgroundTint="@color/grey_transparent"
+                      android:textColor="@color/white"
+                      android:layout_toRightOf="@+id/imgMassage"
+                      android:layout_marginLeft="-70dp"
+                      android:layout_marginTop="10dp"
+                      android:visibility="gone"
+                  />
 
               </RelativeLayout>
 
