--- a/app/src/main/res/layout/fragment_tracking_order.xml
+++ b/app/src/main/res/layout/fragment_tracking_order.xml
@@ -5,11 +5,13 @@
     android:layout_height="match_parent"
     tools:context=".ui.main.order.TrackingOrderFragment">
 
-    <com.google.android.gms.maps.MapView xmlns:android="http://schemas.android.com/apk/res/android"
+    <fragment
         android:id="@+id/map_view_tracking"
         android:layout_width="match_parent"
         android:layout_height="450dp"
-        android:layout_alignParentTop="true" />
+        android:layout_alignParentTop="true"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        />
 
     <LinearLayout
         android:layout_width="match_parent"
