--- a/app/src/main/res/layout/item_new_layout_ver.xml
+++ b/app/src/main/res/layout/item_new_layout_ver.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginBottom="16dp"
+    android:layout_marginBottom="8dp"
     android:id="@+id/layout_item_product"
    >
     <androidx.cardview.widget.CardView
@@ -30,41 +30,25 @@
         <RelativeLayout
             android:id="@+id/promotion"
             android:layout_width="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="8dp"
             android:layout_height="22dp">
-            <RelativeLayout
-                android:id="@+id/iconly_bold"
-                android:layout_marginTop="4dp"
+
+            <TextView
+                android:id="@+id/type_16"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                >
-
-                <View
-                    android:id="@+id/star"
-                    android:layout_width="11.67dp"
-                    android:layout_height="11.08dp"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentTop="true"
-                    android:layout_marginLeft="1.17dp"
-                    android:layout_marginTop="1.46dp"
-                    android:background="@drawable/start" />
-
-                <TextView
-                    android:id="@+id/type_16"
-                    android:layout_width="19dp"
-                    android:layout_height="18dp"
-                    android:layout_marginLeft="4dp"
-                    android:layout_toRightOf="@+id/star"
-                    android:gravity="top"
-                    android:lineSpacingExtra="4sp"
-                    android:text="@string/type_16"
-                    android:textAppearance="@style/type_16"
-                    android:translationY="-1.84sp" />
-            </RelativeLayout>
+                android:layout_height="18dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginLeft="4dp"
+                android:gravity="top"
+                android:lineSpacingExtra="4sp"
+                android:drawableStart="@drawable/start"
+                android:text=" 4.6"
+                android:textAppearance="@style/type_16"
+             />
 
             <RelativeLayout
                 android:id="@+id/sale"
-                android:layout_toRightOf="@+id/iconly_bold"
+                android:layout_toRightOf="@+id/type_16"
                 android:layout_width="62dp"
                 android:layout_height="22dp"
                 android:layout_marginLeft="8dp"
@@ -72,38 +56,39 @@
 
                 <TextView
                     android:id="@+id/off"
-                    android:layout_width="46dp"
+                    android:layout_width="match_parent"
                     android:layout_height="18dp"
-                    android:text="@string/off"
+                    android:layout_centerInParent="true"
+                    android:gravity="center"
+                    android:text="30%"
                     android:textAppearance="@style/off"
-                    android:lineSpacingExtra="4sp"
-                    android:translationY="-1.84sp"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginTop="4dp"
-                    android:gravity="center_horizontal|top" />
+                    android:textColor="@color/red"
+                    android:textFontWeight="1000"
+                    android:textSize="12sp" />
             </RelativeLayout>
 
 
         </RelativeLayout>
 
-        <TextView
-
-            android:layout_below="@+id/promotion"
+        <com.google.android.material.textview.MaterialTextView
             android:id="@+id/name_product"
-            android:layout_width="195dp"
-            android:layout_height="20dp"
-            android:text="@string/pizza_th_gi"
-            android:textAppearance="@style/pizza_th_gi"
-            android:lineSpacingExtra="3sp"
-            android:translationY="-1.65sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/promotion"
             android:layout_marginTop="12dp"
             android:gravity="top"
-            />
+            android:lineSpacingExtra="3sp"
+            android:text="@string/pizza_th_gi"
+            android:ellipsize="end"
+            android:textColor="@color/black"
+            android:textFontWeight="1000"
+            android:textSize="16sp" />
+
         <com.google.android.material.textview.MaterialTextView
             android:layout_below="@id/name_product"
             android:id="@+id/price_product"
             android:layout_width="match_parent"
-            android:layout_height="20dp"
+            android:layout_height="wrap_content"
             android:text="48.000 đ"
             android:layout_marginTop="12dp"
             android:textColor="@color/red"
@@ -118,6 +103,7 @@
                 android:layout_width="20dp"
                 android:layout_height="20dp"
               />
+
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/time"
                 android:layout_marginStart="4dp"
