--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -14,6 +14,8 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor">@color/background</item>
         <item name="android:windowLightStatusBar">false</item>
+
+        <item name="fontFamily">@font/sf_pro_text_regular</item>
     </style>
 
     <!-- Custom border radius for bottomSheetDialogFragment -->
@@ -22,6 +24,6 @@
     </style>
 
     <style name="AppModalStyle" parent="Widget.Design.BottomSheet.Modal">
-        <item name="android:background">@drawable/background_boder_radius_top</item>
+        <item name="android:background">@drawable/background_border_radius_top</item>
     </style>
 </resources>
