--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -26,7 +26,8 @@
         app:tabIndicatorColor="@null"
         app:tabIndicatorFullWidth="true"
         app:tabIndicatorGravity="stretch"
-        app:tabSelectedTextColor="@color/white" />
+        app:tabSelectedTextColor="@color/white"
+        app:tabRippleColor="@android:color/transparent"/>
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/viewPager"
