--- a/app/src/main/res/layout/fragment_food_detail.xml
+++ b/app/src/main/res/layout/fragment_food_detail.xml
@@ -158,7 +158,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="10dp"
-                                android:text="Thêm tạm comment "
+                                android:text="Xem thêm "
                                 android:drawableEnd="@drawable/icon_right"
                                 android:textColor="@color/red"
                                 android:layout_centerHorizontal="true"
