--- a/app/src/main/res/layout/fragment_room_chat.xml
+++ b/app/src/main/res/layout/fragment_room_chat.xml
@@ -38,6 +38,7 @@
             android:id="@+id/rcvChat"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:descendantFocusability="beforeDescendants"
             android:layout_above="@+id/layout_bottom"
             android:paddingHorizontal="10dp"
             android:layout_below="@+id/layout_header"/>
@@ -130,7 +131,7 @@
         <RelativeLayout
             android:id="@+id/layout_header_gallery"
             android:layout_width="match_parent"
-            android:layout_height="30dp"
+            android:layout_height="20dp"
             android:background="@color/dark_grey">
 
             <View
