--- a/app/src/main/res/layout/item_chat_you.xml
+++ b/app/src/main/res/layout/item_chat_you.xml
@@ -32,12 +32,10 @@
                 android:layout_height="38dp"
                 android:layout_marginRight="8dp">
 
-                <ImageView
+                <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/imgAvatar"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@drawable/background_border_radius_circle"
-                    android:clipToOutline="true"
                     />
 
             </LinearLayout>
@@ -115,8 +113,7 @@
                   <ImageView
                       android:id="@+id/imgMassage"
                       android:layout_width="200dp"
-                      android:layout_height="match_parent"
-                      android:maxHeight="500dp"
+                      android:layout_height="300dp"
                       android:scaleType="matrix"
                       android:src="@mipmap/ic_launcher"
                       android:background="@drawable/background_border_radius_chat"
