--- a/app/src/main/res/layout/item_product_layout_hoz.xml
+++ b/app/src/main/res/layout/item_product_layout_hoz.xml
@@ -9,6 +9,7 @@
     android:orientation="vertical">
 
     <RelativeLayout
+        android:id="@+id/layout_main"
         android:layout_width="200dp"
         android:layout_height="215dp">
 
