--- a/app/src/main/res/layout/item_room.xml
+++ b/app/src/main/res/layout/item_room.xml
@@ -9,7 +9,7 @@
     android:clickable="true"
     android:focusable="true">
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/imgAvatar"
         android:layout_width="56dp"
         android:layout_height="56dp"
@@ -29,7 +29,10 @@
         app:layout_constraintCircle="@id/imgAvatar"
         app:layout_constraintCircleAngle="45"
         app:layout_constraintCircleRadius="30dp"
-        tools:ignore="MissingConstraints" />
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="50dp"
+        tools:layout_editor_absoluteY="12dp"
+        android:visibility="gone"/>
 
     <ImageView
         android:id="@+id/imgOnline"
@@ -84,6 +87,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/tvMessage"
         android:layout_marginEnd="10dp"
+        android:visibility="gone"
         />
 
     <TextView
